# Reverse_Game_Of_Life

./: Cargo.toml  README.md  chat_history.txt
.cargo/: config.toml
crates/gol/: Cargo.toml  README.md
crates/gol/src/: lib.rs  main.rs
crates/gol/src/benchmark/: metrics.rs  mod.rs  suite.rs
crates/gol/src/engines/: mod.rs  naive.rs  ultimate.rs
crates/gol/src/grid/: mod.rs  standard.rs
crates/rev_gol/: Cargo.toml
crates/rev_gol/examples/: benchmark_multithreaded.rs  solver_demo.rs
crates/rev_gol/src/: lib.rs  main.rs
crates/rev_gol/src/config/: mod.rs  settings.rs
crates/rev_gol/src/game_of_life/: grid.rs  io.rs  mod.rs  rules.rs
crates/rev_gol/src/reverse/: mod.rs  problem.rs  solution.rs  validator.rs
crates/rev_gol/src/sat/: constraints.rs  encoder.rs  mod.rs  parkissat_solver.rs  solver.rs  solver_factory.rs  variables.rs
crates/rev_gol/src/utils/: display.rs  mod.rs  paths.rs
crates/rev_gol/tests/: interoperability.rs
crates/rev_gol_proof/: Cargo.toml
crates/rev_gol_proof/examples/: audit_board.rs  batch_calibrate.rs  check_composition.rs  check_published.rs  check_reduction.rs  compile_cnf.rs  compile_dimacs.rs
crates/rev_gol_proof/src/: board.rs  circuit.rs  compiler.rs  contracts.rs  dimacs.rs  gadgets.rs  inputs.rs  interfaces.rs  lib.rs  padding.rs  published.rs  reduction.rs  routing.rs  verifier.rs
crates/rev_gol_proof/tests/fixtures/: router_interface_basis.json  small_example.cnf
crates/text_to_input/: README.md
crates/text_to_input/src/: lib.rs  main.rs
docs/: current_state.md  gadget_catalog.md
