[workspace]
members = [
    "crates/gol",
    "crates/rev_gol",
    "crates/rev_gol_proof",
    "crates/text_to_input",
]
default-members = [
    "crates/rev_gol",
    "crates/rev_gol_proof",
    "crates/text_to_input",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.bench]
inherits = "release"
debug = true
